--- a/app/src/main/res/layout/fragment_favourite.xml
+++ b/app/src/main/res/layout/fragment_favourite.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.himanshu.finalfoodapp.navigationFragments.FavouriteFragment">
+    tools:context="com.thetechsamurai.foodonwheelz.navigationFragments.FavouriteFragment">
 
     <LinearLayout
         android:id="@+id/noResLayout"
